name:                xiswa-utils
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xiswa/xiswa-utils#readme
license:             BSD3
license-file:        LICENSE
author:              PT Xiswa Adidaya Nusantara
maintainer:          developer@xiswa.com
copyright:           2023 PT Xiswa Adidaya Nusantara
category:            Util
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Xiswa.Utils
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite xiswa-utils-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
    Paths_xiswa_utils
  hs-source-dirs:
    test
  ghc-options:        -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      base >= 4.7 && < 5
                    , hspec
                    , xiswa-utils

source-repository head
  type:     git
  location: https://github.com/xiswa/xiswa-utils
